[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/Teleporter.gd" type="Script" id=1]
[ext_resource path="res://assets/teleportCircle.png" type="Texture" id=2]
[ext_resource path="res://assets/teleport1.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Glow"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 15, 0 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 16.2852

[sub_resource type="Animation" id=3]
resource_name = "Operate"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "invoke_client_action"
} ]
}

[node name="Node2D" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Teleporter" type="Sprite" parent="."]
modulate = Color( 0.145098, 0.760784, 1, 1 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )
vframes = 4
hframes = 4
frame = 8

[node name="Animator" type="AnimationPlayer" parent="Teleporter"]
autoplay = "Glow"
anims/Glow = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Fx" type="Sprite" parent="."]
visible = false
position = Vector2( 0.890541, -14.3233 )
texture = ExtResource( 3 )
hframes = 11
frame = 10
region_rect = Rect2( 0, 0, 628, 0 )

[node name="Animator" type="AnimationPlayer" parent="Fx"]
anims/Operate = SubResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Node2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Node2D_area_exited"]
[connection signal="animation_finished" from="Fx/Animator" to="." method="_on_Animator_animation_finished"]
